--- a/app/src/main/res/layout/activity_edit_password_dokter.xml
+++ b/app/src/main/res/layout/activity_edit_password_dokter.xml
@@ -67,7 +67,7 @@
         android:layout_marginTop="92dp"
         android:padding="16dp"
         android:background="@drawable/base_white"
-        android:backgroundTint="@color/putihgelap"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
