--- a/app/src/main/res/layout/activity_login_dokter.xml
+++ b/app/src/main/res/layout/activity_login_dokter.xml
@@ -35,27 +35,42 @@
         android:orientation="vertical"
         android:padding="20dp">
 
-        <EditText
-            style="@style/poppinsReg14spBlack"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@drawable/rectangle_rounded_stroke"
-            android:hint="Username"
-            android:textColorHint="#B2B4B6"
-            android:paddingLeft="10dp"
-            android:id="@+id/username"/>
+        <TextView
+            style="@style/poppinsMed14spBlack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="Email"/>
 
         <EditText
             style="@style/poppinsReg14spBlack"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/rectangle_rounded_stroke"
-            android:hint="Password"
+            android:hint="cth. nama@gmail.com"
+            android:inputType="textEmailAddress"
+            android:textColorHint="#B2B4B6"
+            android:paddingLeft="10dp"
+            android:id="@+id/username"/>
+
+        <TextView
+            style="@style/poppinsMed14spBlack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp"
+            android:text="Kata Sandi"/>
+
+        <EditText
+            style="@style/poppinsReg14spBlack"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/rectangle_rounded_stroke"
+            android:hint="Masukkan Kata Sandi"
             android:textColorHint="#B2B4B6"
             android:inputType="textPassword"
             android:paddingLeft="10dp"
-            android:id="@+id/passwd"
-            android:layout_marginTop="10dp"/>
+            android:id="@+id/passwd"/>
     </LinearLayout>
 
     <TextView
@@ -68,7 +83,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="-10dp"
-        android:text="Lupa Password?" />
+        android:text="Lupa Kata Sandi?" />
 
     <Button
         style="@style/poppinsSemiBold16spWhite"
