--- a/app/src/main/res/layout/fragment_konsultasi_dokter.xml
+++ b/app/src/main/res/layout/fragment_konsultasi_dokter.xml
@@ -48,11 +48,57 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvHistory"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/item_history_patient" />
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tvOpen"
+                    style="@style/poppinsReg12spBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    android:textColor="@color/grey"
+                    android:text="Open Chat" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvOpenChat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/tvOpen"
+                    tools:listitem="@layout/item_history_patient" />
+
+                <TextView
+                    android:id="@+id/tvClosed"
+                    style="@style/poppinsReg12spBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_below="@id/rvOpenChat"
+                    android:textColor="@color/grey"
+                    android:text="Closed Chat" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvClosedChat"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/tvClosed"
+                    tools:listitem="@layout/item_history_patient" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+
 
     </RelativeLayout>
 
