--- a/app/src/main/res/layout/item_konsultasi_dk.xml
+++ b/app/src/main/res/layout/item_konsultasi_dk.xml
@@ -1,55 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="333dp"
-    android:layout_height="141dp"
-    android:layout_marginStart="34dp"
-    android:padding="16dp"
-    android:background="@drawable/base_card">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/iVfotoprofile_dk"
-        android:layout_width="80dp"
-        android:layout_height="87dp"
-        android:src="@drawable/usereditprofil" />
-    <LinearLayout
+    <TextView
+        android:id="@+id/tvJam"
+        style="@style/poppinsSemiBold14spBlack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/iVfotoprofile_dk"
-        android:orientation="vertical"
-        android:paddingStart="16dp">
+        app:layout_constraintBottom_toTopOf="@id/baseCover"
+        app:layout_constraintStart_toStartOf="@id/baseCover"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/grey"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_alignStart="@+id/baseCover"
+        android:text="09:30" />
 
-        <TextView
-            style="@style/poppinsSemiBold14spBlack"
-            android:id="@+id/tvDoctorName"
-            android:text="Shafa Shafira"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"/>
+    <RelativeLayout
+        android:id="@+id/baseCover"
+        android:layout_width="333dp"
+        android:layout_height="141dp"
+        android:background="@drawable/base_card"
+        android:padding="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvJam">
 
-        <TextView
-            android:id="@+id/tvKucingName"
-            android:text="Kucing Oyen"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/iVfotoprofile_dk"
+            android:layout_width="80dp"
+            android:layout_height="87dp"
+            android:src="@drawable/usereditprofil" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_clock"/>
+            android:layout_toEndOf="@id/iVfotoprofile_dk"
+            android:orientation="vertical"
+            android:paddingStart="16dp">
+
             <TextView
+                android:id="@+id/tvDoctorName"
+                style="@style/poppinsSemiBold14spBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="09:30 - 10:30"
-                android:layout_marginStart="5dp"/>
+                android:layout_marginTop="8dp"
+                android:text="Shafa Shafira" />
+
+            <TextView
+                style="@style/poppinsReg12spBlack"
+                android:id="@+id/tvKucingName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Kucing Oyen" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_clock" />
+
+                <TextView
+                    android:id="@+id/tvTime"
+                    style="@style/poppinsReg14spBlack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:text="09:30 - 10:30" />
+            </LinearLayout>
+
         </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
