--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,17 @@
         <item name="labelVisibilityMode">labeled</item>
     </style>
 
+    <style name="AppTheme" parent="ThemeOverlay.AppCompat">
+        <!-- ... -->
+        <item name="popupTheme">@style/AppTheme.PopupOverlay</item>
+        <item name="actionBarTheme">@style/AppTheme.AppBarOverlay</item>
+        <!-- ... -->
+    </style>
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
     <style name="SearchViewStyle" parent="Widget.AppCompat.SearchView">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textColorHint">@android:color/black</item>
@@ -60,11 +71,17 @@
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="poppinsSemiBold14spWhite">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="poppinsSemiBold16spWhite">
         <item name="android:fontFamily">@font/poppins_semibold</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
     <style name="poppinsSemiBold16spBGWhite">
         <item name="android:fontFamily">@font/poppins_semibold</item>
         <item name="android:textSize">16sp</item>
