--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,15 @@
         android:padding="20dp">
 
         <TextView
+            android:id="@+id/tipePengguna"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp"
+            android:visibility="gone"
+            android:text="User"/>
+
+        <TextView
             style="@style/poppinsMed14spBlack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
