--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,6 +41,15 @@
             android:layout_marginBottom="4dp"
             android:text="Nama lengkap"/>
 
+        <TextView
+            android:id="@+id/tipePengguna"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="4dp"
+            android:visibility="gone"
+            android:text="User"/>
+
         <EditText
             style="@style/poppinsReg14spBlack"
             android:layout_width="match_parent"
