--- a/app/src/main/res/layout/activity_edit_profile_dokter.xml
+++ b/app/src/main/res/layout/activity_edit_profile_dokter.xml
@@ -81,7 +81,7 @@
             android:background="@color/white">
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/fotoprofile"
+                android:id="@+id/fotoprofile_dk"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -93,13 +93,13 @@
                 android:id="@+id/floatingActionButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignEnd="@+id/fotoprofile"
-                android:layout_alignBottom="@+id/fotoprofile"
-                android:layout_marginEnd="-13dp"
-                android:layout_marginBottom="-3dp"
+                android:layout_alignEnd="@+id/fotoprofile_dk"
+                android:layout_alignBottom="@+id/fotoprofile_dk"
+                android:layout_marginEnd="-15dp"
+                android:layout_marginBottom="21dp"
+                android:backgroundTint="@color/transparan"
                 android:clickable="true"
-                android:src="@drawable/camera"
-                android:backgroundTint="@color/transparan"/>
+                android:src="@drawable/camera" />
 
             <TextView
                 android:id="@+id/txv1"
