--- a/app/src/main/res/layout/history_consultation_detail.xml
+++ b/app/src/main/res/layout/history_consultation_detail.xml
@@ -89,7 +89,7 @@
                     app:cardCornerRadius="6dp">
 
                     <ImageView
-                        android:id="@+id/cover"
+                        android:id="@+id/ivCoverDokter"
                         android:layout_width="150dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -107,7 +107,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"/>
                 <TextView
-                    android:id="@+id/name"
+                    android:id="@+id/tvNameDokter"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -124,7 +124,7 @@
                     android:textColor="@color/black"
                     android:textSize="18sp"/>
                 <TextView
-                    android:id="@+id/instance"
+                    android:id="@+id/tvInstanceVet"
                     android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
