--- a/app/src/main/res/layout/item_list_doctor.xml
+++ b/app/src/main/res/layout/item_list_doctor.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/baseListDokter"
     android:layout_marginBottom="12dp">
 
     <androidx.cardview.widget.CardView
@@ -23,7 +24,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/cover"
+                android:id="@+id/ivCover"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/aji"
@@ -32,7 +33,7 @@
 
             <TextView
                 style="@style/poppinsSemiBold14spBlack"
-                android:id="@+id/title"
+                android:id="@+id/tvTitleDoctor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -40,7 +41,7 @@
 
             <TextView
                 style="@style/poppinsMed12spOrange"
-                android:id="@+id/author"
+                android:id="@+id/tvVetDokter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
