--- a/app/src/main/res/layout/activity_detail_vet_puskeswan.xml
+++ b/app/src/main/res/layout/activity_detail_vet_puskeswan.xml
@@ -12,9 +12,12 @@
         android:layout_height="wrap_content"
         android:background="@drawable/base_orange"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:paddingEnd="16dp"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -40,15 +43,16 @@
                     android:id="@+id/tvTitle"
                     style="@style/poppinsBold24spWhite"
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
-                    android:text="Diskusi yuk!" />
+                    android:layout_height="wrap_content"
+                    android:text="Detail Vet!"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvSubTitle"
                     style="@style/poppinsMed12spWhite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Diskusikan dengan user lain" />
+                    android:text="Info Lengkap" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -96,7 +100,7 @@
                 style="@style/poppinsSemiBold24spOrange"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Toro Vet Clinic"
+                android:text="Anabul Pet Center"
                 android:layout_alignParentStart="true"/>
 
             <ImageView
@@ -118,189 +122,96 @@
 
         </RelativeLayout>
         <ScrollView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/lin_namavet"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="10dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@color/grey">
 
-                <TextView
-                    style="@style/poppinsSemiBold14spBlack"
-                    android:layout_width="148dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="0dp"
-                    android:drawableStart="@drawable/ic_lingkaran"
-                    android:gravity="center"
-                    android:text="Alamat Outlet" />
-                <TextView
-                    style="@style/poppinsReg12spBlack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ruko taman Palem Lestari, Jl. Taman Palem Lestari No.23, RT.3/RW.13, Cengkareng Bar., Kecamatan Cengkareng, Kota Jakarta Barat, Daerah Khusus Ibukota Jakarta 11730"
-                    android:paddingLeft="40dp"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/Detail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    style="@style/poppinsSemiBold14spBlack"
-                    android:layout_width="170dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="10dp"
-                    android:drawableStart="@drawable/ic_lingkaran"
-                    android:gravity="center"
-                    android:text="Jam Operasional"/>
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
+                    <TextView
+                        style="@style/poppinsSemiBold14spBlack"
+                        android:layout_width="148dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="0dp"
+                        android:drawableStart="@drawable/img_3"
+                        android:gravity="center"
+                        android:text="Alamat Outlet" />
                     <TextView
                         style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="40dp"
-                        android:text="Sabtu" />
-
-                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="20dp"
-                        android:textColor="@color/black"
-                        android:text="09.00–16.30" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                        android:text="Jl. Kartini No.22D, Depok, Kec. Pancoran Mas, Kota Depok, Jawa Barat 16431"
+                        android:paddingLeft="35dp"/>
+
                     <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
+                        style="@style/poppinsSemiBold14spBlack"
+                        android:layout_width="170dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="0dp"
+                        android:layout_marginTop="10dp"
+                        android:drawableStart="@drawable/img_6"
+                        android:gravity="center"
+                        android:text="Jam Operasional"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Minggu"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            style="@style/poppinsReg14spBlack"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="35dp"
+                            android:text="Senin - Jumat" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="28dp"
+                            android:textColor="@color/black"
+                            android:text="09.00–16.30" />
+                    </LinearLayout>
+
+                    <TextView
+                        style="@style/poppinsSemiBold14spBlack"
+                        android:layout_width="119dp"
+                        android:layout_height="match_parent"
+                        android:drawableStart="@drawable/img_7"
+                        android:layout_marginTop="10dp"
+                        android:gravity="center"
+                        android:text="Telepon" />
+                    <TextView
+                        style="@style/poppinsReg14spBlack"
+                        android:id="@+id/NoKliik"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(021) 5560028"
                         android:paddingLeft="40dp"/>
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:layout_marginLeft="20dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
 
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
+                    <Button
+                        android:id="@+id/BtnMaps"
+                        android:layout_marginTop="100dp"
+                        android:background="@drawable/rectangle_rounded"
+                        android:text="Tunjukan Lokasi Di Goggle Maps"
+                        android:textColor="@color/white"
+                        android:layout_width="280dp"
                         android:layout_height="wrap_content"
-                        android:paddingLeft="40dp"
-                        android:text="Senin" />
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:layout_marginLeft="20dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="Selasa"
-                        android:paddingLeft="40dp"/>
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:layout_marginLeft="20dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="Rabu"
-                        android:paddingLeft="40dp"/>
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:layout_marginLeft="20dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="Kamis"
-                        android:paddingLeft="40dp"/>
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:layout_marginLeft="20dp"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        style="@style/poppinsReg12spBlack"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:text="Jumat"
-                        android:paddingLeft="40dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="09.00–16.30"
-                        android:textColor="@color/black"
-                        android:layout_marginLeft="20dp"/>
+                        android:layout_gravity="center"/>
                 </LinearLayout>
 
-                <TextView
-                    style="@style/poppinsSemiBold14spBlack"
-                    android:layout_width="119dp"
-                    android:layout_height="match_parent"
-                    android:drawableStart="@drawable/ic_lingkaran"
-                    android:layout_marginTop="10dp"
-                    android:gravity="center"
-                    android:text="Telepon" />
-                <TextView
-                    style="@style/poppinsReg12spBlack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="(021) 5560028"
-                    android:paddingLeft="40dp"/>
-
-                <Button
-                    android:id="@+id/BtnMaps"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/rectangle_rounded"
-                    android:text="Tunjukan Lokasi Di Goggle Maps"
-                    android:textColor="@color/white"
-                    android:layout_width="280dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"/>
-            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
         </ScrollView>
 
