--- a/app/src/main/res/layout/fragment_puskeswan.xml
+++ b/app/src/main/res/layout/fragment_puskeswan.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VetFragment">
+    tools:context=".view.PuskeswanFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -11,5 +12,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:listitem="@layout/list_psw"/>
+        tools:listitem="@layout/list_puskeswan"/>
 </FrameLayout>
