--- a/app/src/main/res/layout/list_vet.xml
+++ b/app/src/main/res/layout/list_vet.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/img_vet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:src="@drawable/torovet"
             android:elevation="8dp"
             android:adjustViewBounds="true"
@@ -46,7 +46,7 @@
                     android:paddingRight="10dp"/>
                 <TextView
                     style="@style/poppinsReg14spBlack"
-                    android:id="@+id/Wakktu"
+                    android:id="@+id/Waktu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="09:00 - 17:00" />
