update fitur produk, dokter, pemesanan konsultasi

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -162,6 +162,7 @@
                 android:layout_below="@id/txv3"
                 android:layout_centerHorizontal="true"
                 android:paddingHorizontal="16dp"
+                android:maxLength="11"
                 android:inputType="number"
                 android:hint="085300000"
                 android:paddingLeft="10dp"
