--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -16,21 +16,24 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="140dp">
+            android:layout_height="wrap_content">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:layout_margin="8dp"
-            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ivProduct"
-                android:layout_width="100dp"
-                android:layout_height="85dp"
-                android:layout_gravity="center_horizontal"
-                android:src="@drawable/royal_canin_kitten" />
-        </LinearLayout>
+                <ImageView
+                    android:id="@+id/ivProduct"
+                    android:layout_width="100dp"
+                    android:layout_height="85dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/royal_canin_kitten" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tvProductName"
@@ -40,6 +43,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:maxWidth="125dp"
+                android:maxLines="2"
                 android:paddingVertical="5dp"
                 android:paddingHorizontal="10dp"
                 android:background="@drawable/rounded_button_background"
