--- a/app/src/main/res/layout/item_product_recomendation.xml
+++ b/app/src/main/res/layout/item_product_recomendation.xml
@@ -27,6 +27,7 @@
             android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
+            android:maxLines="3"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="Royal Canin Kitten" />
